--- a/src/config.example.toml
+++ b/src/config.example.toml
@@ -7,9 +7,14 @@ HOST=""
 PORT=587
 SECURITY="STARTTLS"
 USER=""
-PASSWORD="" 
+PASSWORD_ENV_NAME=""
 SEND_FROM=""
 
 [emailsettings]
 SEND_TO=[
 ]
+MESSAGE="""
+Hello from veckarklocka,
+Everything seems to be working now!
+"""
+SUBJECT="Testing veckarklocka"
